iOS v1.0.2 - Aspect ratio fix, cancel button on leaderboard, and wall speed decrease, player jump decrease and player gravity decrease

--- a/src/pages/leaderboard/leaderboard.scss
+++ b/src/pages/leaderboard/leaderboard.scss
@@ -1,3 +1,6 @@
 page-leaderboard {
 
 }
+.cancelText {
+    color: #fff;
+}
